ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-03-27 Jochen Manz
	- CONFIGS:
		* Updated all postfix main.cnf corresponding to the debian postfix main.cnf

2008-03-27 Benedikt Heintel
	- DATABASE:
		* Fixed #1139: order settings only for one reseller

2008-03-26 Benedikt Heintel
	- CONFIGS:
		* Fixed #1128: fastcgi idle timeout
	- DOCU:
		* Fixed #869: SUGGESTION: check if mysqld is running before starting installer
	- GUI:
		* Fixed #1135: php and cgi options in the hosting plans

2008-03-25 Benedikt Heintel
	- ENGINE:
		* Fixed #1133: Error adding Domains r1078

2008-03-24 Benedikt Heintel
	- GUI:
		* Fixed: safe mode restriction in vfs.php
		* Fixed #1132: Hardcoded theme image paths

2008-03-23 Benedikt Heintel
	- GUI:
		* Fixed: Warnings and Notices if no Database found or no conection to it
		* Fixed: Reformated SSL switch
		* Fixed: Error in Circular Mail if no user set
	- ENGINE:
		* Fixed #836: Static awstats in user's language
	- DISTS:
		* Fixed: (OpenSuse) proftpd.conf not working out of box

2008-03-22 Benedikt Heintel
	- GUI:
		* Fixed: Error in input check and IP management
	- DISTS:
		* Fixed #1130: (FreeBSD) Fix program path in freebsd distro

2008-03-22 Christian Hernmarck
	- DISTS:
		* Fixed: openSuSE small things (DirectoryIndex not only master vhost, *creating* scoreboard dir, /etc/*authlib*/userdb
	- GUI:
		* Fixed #1129: Errors after upgrading to r1069

2008-03-21 Benedikt Heintel
	- DATABASE:
		* Fixed #1085: disable protocols in server status which are not available by default
	- ENGINE:
		* Fixed: two errors in htuser-mngr
		* Fixed #945: logrotate fails because of ispcp script
		* Fixed #1113: removed add COURIER_CONF_DIR and stored userdb to AUTHLIB_CONF_DIR path
		* Fixed #1126: do not add all domains into the MTA domains list
	- GUI:
		* Fixed #919: IP Management UI
		* Fixed #1072: open directory (ftp class)
		* Fixed #1115: ispcp/gui/include/ispcp-config.php under FreeBSD